# led-dot-matrix-emulator

./: .gitignore  .travis.yml  CMakeLists.txt
lib/: CMakeLists.txt  common.h  device.c  device.h  mem.c  mem.h  register.c  register.h  vt100.c  vt100.h
scripts/: auto_merge.sh  travis-automerge
test/: CMakeLists.txt  common_test_suite.h  main.c  vt100_test_runner.c  vt100_test_suite.c  vt100_test_suite.h
unit_test/: CMakeLists.txt  common_test_suite.c  common_test_suite.h  device_test_suite.c  device_test_suite.h  main.c  register_test_suite.c  register_test_suite.h  unit_test  vt100_test_suite.c
unit_test/mock/: CMakeLists.txt  mem_mock.c  mem_mock.h
